[package]
name = "gnustep_base_src"
version = "0.0.1"
authors = ["Mads Marquart <mads@marquart.dk>"]
edition = "2018"

description = "Source of The GNUstep Base Library and logic to build it"
keywords = ["gnustep", "objc", "gnustep-base", "build-dependencies"]
categories = [
    "development-tools::build-utils",
]
readme = "README.md"
repository = "https://github.com/madsmtm/gnustep_base_src"
documentation = "https://docs.rs/gnustep_base_src/"
license = "MIT/Apache-2.0"
