[package]
name = "objc-sys"
version = "0.2.0-alpha.1" # Remember to update html_root_url in lib.rs
authors = ["Mads Marquart <mads@marquart.dk>"]
edition = "2021"

description = "Raw bindings to the Objective-C runtime and ABI"
keywords = ["objective-c", "macos", "ios", "objc_msgSend", "sys"]
categories = [
    "external-ffi-bindings",
    # "no_std" # TODO
    "os::macos-apis",
]
repository = "https://github.com/madsmtm/objc2"
documentation = "https://docs.rs/objc-sys/"
license = "MIT"

readme = "README.md"

# Downstream users can customize the linking to libobjc!
# See https://doc.rust-lang.org/cargo/reference/build-scripts.html#overriding-build-scripts
links = "objc"
build = "build.rs"

# The default is `apple` on Apple platforms; all other platforms will error
# if no feature flag is specified.
[features]
# Link to Apple's objc4
apple = []

# Link to GNUStep's libobjc2
gnustep-1-7 = []
gnustep-1-8 = ["gnustep-1-7"]
gnustep-1-9 = ["gnustep-1-8"]
gnustep-2-0 = ["gnustep-1-9"]
gnustep-2-1 = ["gnustep-2-0"]

# Link to Microsoft's libobjc2
winobjc = ["gnustep-1-8"]

# TODO
objfw = []

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

targets = [
    # MacOS
    "x86_64-apple-darwin",
    # "i686-apple-darwin",
    # iOS
    "aarch64-apple-ios",
    "x86_64-apple-ios",
    # GNUStep
    "x86_64-unknown-linux-gnu",
    "i686-unknown-linux-gnu",
]
