[package]
name = "objc2-encode"
# Remember to update html_root_url in lib.rs and README.md
version = "1.1.0"
authors = ["Steven Sheldon", "Mads Marquart <mads@marquart.dk>"]
edition = "2018"

description = "Objective-C type-encodings"
keywords = ["objective-c", "macos", "ios", "encode"]
categories = [
    "development-tools::ffi",
    "encoding",
    "no-std",
    "os::macos-apis",
]
readme = "README.md"
repository = "https://github.com/madsmtm/objc2"
documentation = "https://docs.rs/objc2-encode/"
license = "MIT"
