[package]
name = "objc2-encode"
# Remember to update html_root_url in lib.rs and README.md
version = "2.0.0-beta.2"
authors = ["Steven Sheldon", "Mads Marquart <mads@marquart.dk>"]
edition = "2021"

description = "Objective-C type-encodings"
keywords = ["objective-c", "macos", "ios", "encode"]
categories = [
    "development-tools::ffi",
    "encoding",
    "no-std",
    "os::macos-apis",
]
readme = "README.md"
repository = "https://github.com/madsmtm/objc2"
documentation = "https://docs.rs/objc2-encode/"
license = "MIT"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
