[package]
name = "objc2-foundation"
version = "0.2.0-alpha.3" # Remember to update html_root_url in lib.rs
authors = ["Steven Sheldon", "Mads Marquart <mads@marquart.dk>"]
edition = "2018"

description = "Bindings to the Objective-C Cocoa Foundation framework"
keywords = ["objective-c", "macos", "ios", "cocoa", "uikit"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "os::macos-apis",
]
readme = "README.md"
repository = "https://github.com/madsmtm/objc2"
documentation = "https://docs.rs/objc2-foundation/"
license = "MIT"

build = "build.rs"

[features]
default = ["block"]
# Provided as a way to cut down on dependencies
block = ["block2"]

[dependencies]
block2 = { path = "../block2", version = "=0.2.0-alpha.2", optional = true }
objc2 = { path = "../objc2", version = "=0.3.0-alpha.5" }
objc-sys = { path = "../objc-sys", version = "=0.2.0-alpha.1" }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
