[package]
name = "objc2-foundation"
version = "0.2.0-alpha.4" # Remember to update html_root_url in lib.rs
authors = ["Steven Sheldon", "Mads Marquart <mads@marquart.dk>"]
edition = "2021"

description = "Bindings to the Objective-C Cocoa Foundation framework"
keywords = ["objective-c", "macos", "ios", "cocoa", "uikit"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "os::macos-apis",
]
readme = "README.md"
repository = "https://github.com/madsmtm/objc2"
documentation = "https://docs.rs/objc2-foundation/"
license = "MIT"

[features]
default = ["apple", "block"]
# Provided as a way to cut down on dependencies
block = ["block2"]

# Runtime selection. See `objc-sys` and `block-sys` for details.
apple = ["objc2/apple", "block2?/apple"]
gnustep-1-7 = ["objc2/gnustep-1-7", "block2?/gnustep-1-7"]
gnustep-1-8 = ["gnustep-1-7", "objc2/gnustep-1-8", "block2?/gnustep-1-8"]
gnustep-1-9 = ["gnustep-1-8", "objc2/gnustep-1-9", "block2?/gnustep-1-9"]
gnustep-2-0 = ["gnustep-1-9", "objc2/gnustep-2-0", "block2?/gnustep-2-0"]
gnustep-2-1 = ["gnustep-2-0", "objc2/gnustep-2-1", "block2?/gnustep-2-1"]

[dependencies]
block2 = { path = "../block2", version = "=0.2.0-alpha.4", default-features = false, optional = true }
objc2 = { path = "../objc2", version = "=0.3.0-beta.0", default-features = false }

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
features = ["block"]

targets = [
    # MacOS
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    # "i686-apple-darwin",
    # iOS
    "aarch64-apple-ios",
    "x86_64-apple-ios",
    # "armv7-apple-ios",
    # "i386-apple-ios",
    # GNUStep
    "x86_64-unknown-linux-gnu",
    "i686-unknown-linux-gnu",
    # Windows
    "x86_64-pc-windows-msvc",
]
