[package]
name = "objc2_block_sys"
version = "0.0.0" # Remember to update html_root_url in lib.rs
authors = ["Mads Marquart <mads@marquart.dk>"]
edition = "2018"

description = "Raw bindings to Apple's C language extension of blocks"
keywords = ["objective-c", "macos", "ios", "blocks", "sys"]
categories = [
    "external-ffi-bindings",
    # "no_std", # TODO
    "os::macos-apis",
]
repository = "https://github.com/madsmtm/objc2"
documentation = "https://docs.rs/objc2_block_sys/"
license = "MIT"

# readme = "README.md"

# Downstream users can customize the linking!
# See https://doc.rust-lang.org/cargo/reference/build-scripts.html#overriding-build-scripts
links = "block"
build = "build.rs"

[features]
# Link to Apple's libclosure (exists in libSystem)
# See https://opensource.apple.com/source/libclosure/
# Accessible mirror https://github.com/madsmtm/libclosure
#
# This is the default on Apple platforms
apple = []

# Link to libBlocksRuntime from compiler-rt
# See https://github.com/llvm/llvm-project/tree/release/13.x/compiler-rt/lib/BlocksRuntime
#
# This is the default on non-Apple platforms
compiler-rt = []

# Link to GNUStep's libobjc2 (which contains the block implementation)
gnustep-1-7 = ["objc2_sys"]
gnustep-1-8 = ["gnustep-1-7"]
gnustep-1-9 = ["gnustep-1-8"]
gnustep-2-0 = ["gnustep-1-9"]
gnustep-2-1 = ["gnustep-2-0"]

# Link to Microsoft's libobjc2
winobjc = ["gnustep-1-8"]

# TODO
objfw = []

[dependencies]
objc2_sys = { path = "../objc2_sys", optional = true }
