[package]
name = "objc-foundation"
version = "0.1.1" # Remember to update html_root_url in lib.rs
authors = ["Steven Sheldon", "Mads Marquart <mads@marquart.dk>"]
edition = "2018"

description = "Bindings to the Objective-C Foundation framework."
keywords = ["objective-c", "macos", "ios", "cocoa", "uikit"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "os::macos-apis",
]
readme = "README.md"
repository = "https://github.com/madsmtm/objc"
documentation = "https://docs.rs/objc_foundation/"
license = "MIT"

[features]
default = ["block"]

[dependencies]
# Feature provided as a way to cut down on dependencies
block = { path = "../objc2_block", optional = true, version = "0.1" }
objc = { path = "../objc2", version = "0.2.7" }
objc_id = { path = "../objc2_id", version = "0.1.1" }
