[package]
name = "objc2_id"
version = "0.1.1" # Remember to update html_root_url in lib.rs
authors = ["Steven Sheldon", "Mads Marquart <mads@marquart.dk>"]
edition = "2018"

description = "Smart pointers for Objective-C reference counting."
keywords = ["objective-c", "macos", "ios", "retain", "release"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "os::macos-apis",
]
readme = "README.md"
repository = "https://github.com/madsmtm/objc2"
documentation = "https://docs.rs/objc2_id/"
license = "MIT"

[dependencies]
objc = { path = "../objc2", version = "0.2.7" }
