[package]
name = "objc2_sys"
version = "0.0.0" # Remember to update html_root_url in lib.rs
authors = ["Mads Marquart <mads@marquart.dk>"]
edition = "2018"

description = "Raw bindings to Objective-C runtimes"
keywords = ["objective-c", "macos", "ios", "objc_msgSend", "sys"]
categories = [
    "external-ffi-bindings",
    # "no_std" # TODO
    "os::macos-apis",
]
repository = "https://github.com/madsmtm/objc2"
documentation = "https://docs.rs/objc2_sys/"
license = "MIT"

exclude = [
    # Used to help developers track changes by running bindgen against
    # different revisions of Apple's open source `objc4`.
    "helper-scripts/*",
]

readme = "README.md"

# Downstream users can customize the linking to libobjc!
# See https://doc.rust-lang.org/cargo/reference/build-scripts.html#overriding-build-scripts
links = "objc"
build = "build.rs"

[features]
# If enabled, GNUStep's libobjc2 will be compiled and linked from source.
vendor_gnustep = ["gnustep_libobjc2_src"]
# Whether to link to libobjc statically.
#
# Only supported for vendored dependencies, it will trigger a compile-time
# error when venoring is not enabled.
static = []

[build-dependencies]
gnustep_libobjc2_src = { path = "../gnustep_libobjc2_src", optional = true }
