[package]
name = "block"
version = "0.1.6"
authors = ["Steven Sheldon", "Mads Marquart <mads@marquart.dk>"]
edition = "2018"

description = "Interface for Apple's C language extension of blocks."
keywords = ["objective-c", "macos", "ios", "blocks"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "os::macos-apis",
]
readme = "README.md"
repository = "https://github.com/madsmtm/objc"
documentation = "https://docs.rs/block/"
license = "MIT"

exclude = [
    "tests-ios/**",
]

[dev-dependencies]
objc_test_utils = { path = "../objc_test_utils", version = "0.0" }
