[package]
name = "objc_exception"
version = "0.1.2" # Remember to update html_root_url in lib.rs
authors = ["Steven Sheldon", "Mads Marquart <mads@marquart.dk>"]
edition = "2018"

description = "Objective-C's throw and try/catch statements."
keywords = ["objective-c", "macos", "ios", "try", "catch"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "no-std",
    "os::macos-apis",
]
repository = "https://github.com/madsmtm/objc"
documentation = "https://docs.rs/objc_exception/"
license = "MIT"

build = "build.rs"

[build-dependencies]
cc = "1"
