[package]
name = "objc-foundation"
version = "0.1.1"
authors = ["Steven Sheldon"]
edition = "2018"

description = "Rust wrapper for Objective-C's Foundation framework."
keywords = ["objective-c", "osx", "ios", "cocoa", "uikit"]
repository = "http://github.com/SSheldon/rust-objc-foundation"
documentation = "http://ssheldon.github.io/rust-objc/objc_foundation/"
license = "MIT"

exclude = [".gitignore"]

[features]
default = ["block"]

[dependencies]
block = { optional = true, version = "0.1" }
objc = { path = "../objc", version = "0.2.7" }
objc_id = { path = "../objc_id", version = "0.1" }
