[package]
name = "objc-foundation-derive"
version = "0.0.1" # Remember to update html_root_url in lib.rs
authors = ["Steven Sheldon", "Mads Marquart <mads@marquart.dk>"]
edition = "2018"

description = "Procedural macros for deriving traits from objc_foundation."
keywords = ["objective-c", "macos", "ios", "cocoa", "uikit"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "os::macos-apis",
]
repository = "https://github.com/madsmtm/objc"
documentation = "https://docs.rs/objc-foundation-derive/"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.10"
quote = "0.3.8"
