[package]
name = "test-ui"
version = "0.1.0"
edition = "2021"
publish = false

repository = "https://github.com/madsmtm/objc2"
license = "MIT"

[features]
default = ["apple", "std"]
std = ["block2/std", "objc2-foundation/std"]

# Runtime features. Rely on `objc2-foundation` and `block2` to enable these
# for the other dependencies.
apple = ["block2/apple", "objc2-foundation/apple"]
gnustep-1-7 = ["block2/gnustep-1-7", "objc2-foundation/gnustep-1-7"]
gnustep-1-8 = ["gnustep-1-7", "block2/gnustep-1-8", "objc2-foundation/gnustep-1-8"]
gnustep-1-9 = ["gnustep-1-8", "block2/gnustep-1-9", "objc2-foundation/gnustep-1-9"]
gnustep-2-0 = ["gnustep-1-9", "block2/gnustep-2-0", "objc2-foundation/gnustep-2-0"]
gnustep-2-1 = ["gnustep-2-0", "block2/gnustep-2-1", "objc2-foundation/gnustep-2-1"]


[dependencies]
trybuild = "1.0"
block2 = { path = "../block2", default-features = false }
objc2 = { path = "../objc2", default-features = false }
objc2-foundation = { path = "../objc2-foundation", default-features = false }
