[package]
name = "tests"
version = "0.1.0"
edition = "2018"
publish = false

repository = "https://github.com/madsmtm/objc2"
license = "MIT"

build = "build.rs"

[dependencies]
block2 = { path = "../block2" }
block-sys = { path = "../block-sys" }
objc-sys = { path = "../objc-sys" }
objc2 = { path = "../objc2" }
objc2-encode = { path = "../objc2-encode" }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
paste = "1.0"
