[package]
name = "tests"
version = "0.1.0"
edition = "2018"
publish = false

repository = "https://github.com/madsmtm/objc2"
license = "MIT"

build = "build.rs"

[features]
# Enable UI tests
#
# These are not enabled by default because trybuild doesn't pass feature flags
# (like --features gnustep-1-9) to its cargo invocation, and hence they don't
# always work.
#
# Also, they're slower than most tests.
ui = ["trybuild"]
assembly = ["cargo_metadata"]

[dependencies]
block2 = { path = "../block2" }
block-sys = { path = "../block-sys" }
objc-sys = { path = "../objc-sys" }
objc2 = { path = "../objc2" }
objc2-encode = { path = "../objc2-encode" }
objc2-foundation = { path = "../objc2-foundation" }

# Put here instead of dev-dependencies because we want to make it optional
trybuild = { version = "1.0", optional = true }
cargo_metadata = { version = "0.14", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
paste = "1.0"

[[bin]]
name = "test_assembly"
required-features = ["assembly"]
