[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

repository = "https://github.com/madsmtm/objc2"
license = "MIT"

build = "build.rs"

[features]
default = ["apple"]
# Enable UI tests
#
# These are not enabled by default because trybuild doesn't pass feature flags
# (like --features gnustep-1-9) to its cargo invocation, and hence they don't
# always work.
#
# Also, they're slower than most tests.
ui = ["trybuild"]
assembly = ["cargo_metadata"]

# Runtime features. Rely on `objc2-foundation` and `block2` to enable these
# for the other dependencies.
apple = ["block2/apple", "objc2-foundation/apple"]
gnustep-1-7 = ["block2/gnustep-1-7", "objc2-foundation/gnustep-1-7"]
gnustep-1-8 = ["gnustep-1-7", "block2/gnustep-1-8", "objc2-foundation/gnustep-1-8"]
gnustep-1-9 = ["gnustep-1-8", "block2/gnustep-1-9", "objc2-foundation/gnustep-1-9"]
gnustep-2-0 = ["gnustep-1-9", "block2/gnustep-2-0", "objc2-foundation/gnustep-2-0"]
gnustep-2-1 = ["gnustep-2-0", "block2/gnustep-2-1", "objc2-foundation/gnustep-2-1"]

malloc = ["objc2/malloc"]

[dependencies]
block2 = { path = "../block2", default-features = false }
block-sys = { path = "../block-sys", default-features = false }
objc-sys = { path = "../objc-sys", default-features = false }
objc2 = { path = "../objc2", default-features = false }
objc2-foundation = { path = "../objc2-foundation", default-features = false }

# Put here instead of dev-dependencies because we want to make it optional
trybuild = { version = "1.0", optional = true }
cargo_metadata = { version = "0.14", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
paste = "1.0"

[[bin]]
name = "test_assembly"
required-features = ["assembly"]
